--- a/app/views/devise/registrations/_member_details.html.erb
+++ b/app/views/devise/registrations/_member_details.html.erb
@@ -59,6 +59,24 @@
     </div>
   </div>
 
+  <div class="control-group">
+    <%= f.label :twitter, :class => 'control-label' %>
+    <div class="controls">
+      <%= f.text_field :twitter %>
+    </div>
+  </div>
+
+  <% if student? %>
+
+  <div class="control-group">
+    <%= f.label :dob, :class => 'control-label' %>
+    <div class="controls">
+      <%= f.text_field :dob, :required => :required, :class => "datepicker" %>
+      <span class="help-inline">(required)</span>
+    </div>
+  </div>
+
+  <% end %>
 </fieldset>
 
 <% unless individual? || student? %>
