--- a/app/views/devise/registrations/_university_details.html.erb
+++ b/app/views/devise/registrations/_university_details.html.erb
@@ -1,5 +1,5 @@
 <fieldset>
-  <legend>University Details</legend>
+  <legend>University details</legend>
 
   <div class="control-group">
     <%= f.label :university_name, :class => 'control-label' %>
