--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -26,7 +26,7 @@
   <% end %>
 
   <fieldset>
-    <legend>Your Communication Preferences</legend>
+    <legend>Your communication preferences</legend>
 
     <div class="control-group newsletter">
       <div class="controls">
