Fix text on signup page

--- a/app/views/devise/registrations/_university_details.html.erb
+++ b/app/views/devise/registrations/_university_details.html.erb
@@ -22,7 +22,7 @@
     <div class="controls">
       <%= f.email_field :university_email, :required => 'required' %>
       <span class="help-inline">(required)</span>
-      <span class="help-block"><small>Your University issued email address</small></span>
+      <span class="help-block"><small>Your university issued email address</small></span>
     </div>
   </div>
 
