--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,9 +30,16 @@
                 <li><%= link_to "Sign in", new_member_session_path %></li>
               <% end %>
             </ul>
+
           </div>
         </div>
       </div>
+
+      <a id="mobile-menu" class="btn btn-navbar" data-toggle="collapse" data-target=".collapse">
+        <span class="icon icon-reorder"></span>
+      </a>
+
+      <div class="nav-collapse collapse">
 
       <div class="navbar navbar-static-top" id="mainnav">
         <div class="container">
@@ -99,6 +106,25 @@
           </div>
         </div>
       </div>
+
+      </div>
+
+      <div class="navbar navbar-inverse navbar-static-top mobile-only">
+        <div class="container">
+          <ul class="nav navbar-nav navbar-right">
+            <li><a href="http://theodi.org/contact">Contact us</a></li>
+            <% if current_member %>
+              <li><%= link_to "My Account", member_path(current_member) %></li>
+              <li><%= link_to "Sign out", member_session_path, :method => :delete %></li>
+            <% elsif current_admin %>
+              <li><%= link_to "ADMIN MODE: Sign out", member_session_path, :method => :delete %></li>
+            <% else %>
+              <li><%= link_to "Sign in", new_member_session_path %></li>
+            <% end %>
+          </ul>
+        </div>
+      </div>
+
     </nav>
 
     <div class="whiteout">
