Hide explanatory text for student signups
The mention of payments could put people off when that is not necessary
for student signups

--- a/app/views/members/payment.html.erb
+++ b/app/views/members/payment.html.erb
@@ -6,6 +6,8 @@
   <% end %>
 </p>
 
+<% unless @member.student? %>
+
 <% case @discount_type %>
 <% when :free %>
 <p>
@@ -30,6 +32,8 @@
   <% else %>
     <p>Being <%= indefinite_article(@member.get_plan_description) %> is <%= @member.get_plan_price %> per year.</p>
   <% end %>
+
+<% end %>
 
 <% end %>
 
