Add student's first name in the confirmation email

--- a/app/views/devise_mailer/_student_confirmation.html.erb
+++ b/app/views/devise_mailer/_student_confirmation.html.erb
@@ -1,4 +1,4 @@
-<p>Dear Student,</p>
+<p><%= greeting(@member) %>,</p>
 
 <p>We are delighted to welcome you to the Open Data Institute member network. As an ODI Supporter you join a unique group of individuals and organisations who share a deep interest in open data and its potential.</p>
 
