Add an example badge to the signup thanks page

--- a/app/views/members/thanks.html.erb
+++ b/app/views/members/thanks.html.erb
@@ -1,3 +1,5 @@
+<%= image_tag("badges/black/100px.png", class: "thanks-badge") %>
+
 <p class="lead">
 Your membership number is <%= content_tag(:span, @member.membership_number, :class => 'text-info') %>
 and you should be receiving a welcome email with all the information you need soon.
