Change course date calendars to dropdowns
We only need to know the month and year for the course start and end
dates, so we don't really need a calendar anymore. I think a month and
year dropdown should work a lot better UI-wise.

--- a/app/assets/stylesheets/members.css.scss
+++ b/app/assets/stylesheets/members.css.scss
@@ -35,5 +35,10 @@
   input.datepicker {
     width: 120px;
   }
+
+  select.month-datepicker,
+  select.year-datepicker {
+    width: auto;
+  }
 }
 
