Right to cancel does not apply to students

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -140,7 +140,7 @@
       <%= f.submit "Become an ODI member", :id => 'submit', :class => 'btn btn-primary btn-large' %>
     </p>
 
-    <% if individual? || student? %>
+    <% if individual? %>
       <p>You have the <%= link_to 'right to cancel', "https://docs.google.com/document/d/1CmSGI-hQjcIa0husreVntsxA-5CId3H_BWjRzRmZR6A/edit?usp=sharing" %> within the first 14 days of your membership.</p>
     <% end %>
   </div>
