--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -23,6 +23,13 @@
 	 overflow-y: scroll;
  }
 
+ #terms {
+   .definitions {
+     font-size: 14px;
+     margin-left: 26px;
+   }
+ }
+
  #terms ul {
    margin-left: 44px;
    margin-bottom: 30px;
