--- a/app/views/devise/registrations/_university_details.html.erb
+++ b/app/views/devise/registrations/_university_details.html.erb
@@ -26,46 +26,7 @@
     </div>
   </div>
 
-  <div class="control-group">
-    <%= f.label :university_street_address, :class => 'control-label' %>
-    <div class="controls">
-      <%= f.text_field :university_street_address, :required => :required %>
-      <span class="help-inline">(required)</span>
-      <span class="help-block"><small>Your address whilst at University</small></span>
-    </div>
-  </div>
-
-  <div class="control-group">
-    <%= f.label :university_address_locality, :class => 'control-label' %>
-    <div class="controls">
-      <%= f.text_field :university_address_locality %>
-    </div>
-  </div>
-
-  <div class="control-group">
-    <%= f.label :university_address_region, :class => 'control-label' %>
-    <div class="controls">
-      <%= f.text_field :university_address_region, :required => :required %>
-      <span class="help-inline">(required)</span>
-    </div>
-  </div>
-
-  <div class="control-group">
-    <%= f.label :university_address_country, :class => 'control-label' %>
-    <div class="controls">
-      <%= f.country_select :university_address_country, priority_countries: ["GB"], prompt: "Please select", :required => :required %>
-      <span class="help-inline">(required)</span>
-    </div>
-  </div>
-
-  <div class="control-group">
-    <%= f.label :university_postal_code, :class => 'control-label' %>
-    <div class="controls">
-      <%= f.text_field :university_postal_code, :required => :required %>
-      <span class="help-inline">(required)</span>
-    </div>
-  </div>
-
+  <%= f.hidden_field :university_address_country, value: "GB" %>
   <%= f.hidden_field :university_country, value: "GB" %>
 </fieldset>
 
