Improve student confirmation page design

--- a/app/assets/stylesheets/members.css.scss
+++ b/app/assets/stylesheets/members.css.scss
@@ -38,3 +38,15 @@
   }
 }
 
+.thanks-banner {
+  background-image: image_url('thanks-banner.jpg');
+  background-position: center;
+  height: 130px;
+  margin-top: -30px;
+  margin-bottom: 30px;
+}
+
+p.thanks {
+  color: #000;
+}
+
