--- a/app/views/members/thanks.html.erb
+++ b/app/views/members/thanks.html.erb
@@ -1,8 +1,9 @@
+<div class="thanks-banner">&nbsp;</div>
+
 <%= image_tag("badges/black/100px.png", class: "thanks-badge") %>
 
-<p class="lead">
-Your membership number is <%= content_tag(:span, @member.membership_number, :class => 'text-info') %>
-and you’ll shortly receive a welcome email with all the information you need about your membership.
+<p class="lead thanks">
+You’ll shortly receive a welcome email with all the information you need about your membership.
 </p>
 
 <p>
@@ -10,8 +11,3 @@ In the meantime why not take a look at our <%= link_to "open data stories", "htt
 and the <%= link_to "other members", "https://directory.theodi.org/members" %> in the network?
 <p>
 
-<hr/>
-
-<p>
-  You can <%= link_to "Edit your account", member_path(@member), :class => 'btn btn-primary' %> if you need to update any of your details.
-</p>
