Change DOB to use text fields
We're using the GDS pattern from here:
https://www.gov.uk/service-manual/user-centred-design/resources/patterns/dates.html#memorable-dates

--- a/app/assets/stylesheets/members.css.scss
+++ b/app/assets/stylesheets/members.css.scss
@@ -32,6 +32,25 @@
 }
 
 .main-default {
+  .control-group.dob {
+    .day, .month, .year {
+      width: 30px;
+      text-align: center;
+      margin-right: 6px;
+    }
+
+    .year {
+      width: 50px;
+    }
+
+    .help-block {
+      color: #999;
+      padding-top: 6px;
+    }
+  }
+}
+
+.main-default {
   select.month-datepicker,
   select.year-datepicker {
     width: auto;
