Change University fields to include "college"

--- a/app/views/devise/registrations/_university_details.html.erb
+++ b/app/views/devise/registrations/_university_details.html.erb
@@ -1,5 +1,5 @@
 <fieldset>
-  <legend>University details</legend>
+  <legend>University/college details</legend>
 
   <div class="control-group">
     <%= f.label :university_name, :class => 'control-label' %>
@@ -22,7 +22,7 @@
     <div class="controls">
       <%= f.email_field :university_email, :required => 'required' %>
       <span class="help-inline">(required)</span>
-      <span class="help-block"><small>Your university issued email address</small></span>
+      <span class="help-block"><small>Your university/college issued email address</small></span>
     </div>
   </div>
 
