Make postcode box small
It seems like the postcode box should be smaller to indicate the size of
input expected

--- a/app/views/devise/registrations/_member_details.html.erb
+++ b/app/views/devise/registrations/_member_details.html.erb
@@ -138,7 +138,7 @@
   <div class="control-group">
     <%= f.label :postal_code, :class => 'control-label' %>
     <div class="controls">
-      <%= f.text_field :postal_code, :required => :required %>
+      <%= f.text_field :postal_code, :required => :required, :class => "postcode" %>
       <span class="help-inline">(required)</span>
     </div>
   </div>
