Hide 3rd party checkbox from everyone but individuals

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -37,6 +37,8 @@
       </div>
     </div>
 
+    <% if individual? %>
+
     <div class="control-group newsletter">
       <div class="controls">
         <label class="checkbox">
@@ -44,6 +46,9 @@
         </label>
       </div>
     </div>
+
+    <% end %>
+
   </fieldset>
 
   <fieldset>
