Show 3rd party checkbox when node is selected

--- a/app/assets/stylesheets/members.css.scss
+++ b/app/assets/stylesheets/members.css.scss
@@ -31,6 +31,10 @@
   }
 }
 
+.control-group.third-parties {
+  display: none;
+}
+
 @media screen and (max-width: 500px) {
   .control-group.newsletter {
     .controls {
