--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -39,7 +39,7 @@
 
     <% if individual? %>
 
-    <div class="control-group newsletter">
+    <div class="control-group newsletter third-parties">
       <div class="controls">
         <label class="checkbox">
           <%= f.check_box :cached_share_with_third_parties %> <%= t(:share_with_third_parties) %>
