Fix spelin' mistake

--- a/app/views/devise_mailer/_student_confirmation.html.erb
+++ b/app/views/devise_mailer/_student_confirmation.html.erb
@@ -48,7 +48,7 @@
 
     <ul style="font-family: Helvetica, Arial, sans-serif;">
       <li>
-        Browse out <%= link_to "case studies", "http://theodi.org/case-studies" %> 
+        Browse our <%= link_to "case studies", "http://theodi.org/case-studies" %> 
         and technical open data <%= link_to 'guides', 'http://theodi.org/guides' %>
       </li>
       <li>
