Make all students use the same product internally
Before we were using `student-free` as the product name but this would
mean other changes to the system because the product name trickles
through.

This way we can keep all students on the same product but pass them to
different payment pages if `?free=true` is added to the signup page.

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -9,6 +9,7 @@
     This won't take longer than a couple of minutes!
   </p>
 
+  <%= hidden_field_tag(:free, params[:free]) if params[:free].present? %>
   <%= f.hidden_field :coupon, value: params[:coupon] if params[:coupon].present? %>
   <%= f.hidden_field :coupon, value: params[:member][:coupon] if params[:member] && params[:member][:coupon].present? %>
   <%= f.hidden_field :origin, value: origin_value %>
