--- a/app/views/uploads/new.html.erb
+++ b/app/views/uploads/new.html.erb
@@ -1,5 +1,4 @@
-<h1>Uploads#new</h1>
-<p>Find me in app/views/uploads/new.html.erb</p>
+<h1>Upload student CSV files</h1>
 
 <a href='sample.csv'>Download template CSV</a>
 
@@ -9,3 +8,17 @@
   <%= submit_tag "Upload" %>
 
 <% end %>
+
+<h2>Valid universities</h2>
+<ul>
+  <% University.names.each do |name| %>
+    <li><%= name %></li>
+  <% end %>
+</ul>
+
+<h2>Valid qualifications</h2>
+<ul>
+  <% Qualification.names.each do |name| %>
+    <li><%= name %></li>
+  <% end %>
+</ul>
