--- a/app/views/uploads/create.html.erb
+++ b/app/views/uploads/create.html.erb
@@ -1,5 +1,4 @@
-<h1>Uploads#create</h1>
-<p>Find me in app/views/uploads/create.html.erb</p>
+<h1>Upload results</h1>
 
 <p>
   Created <%= pluralize @members.count, "new member" %>.
