--- a/app/views/uploads/new.html.erb
+++ b/app/views/uploads/new.html.erb
@@ -1,13 +1,16 @@
 <h1>Upload student CSV files</h1>
 
-<a href='sample.csv'>Download template CSV</a>
-
 <%= form_tag({:action => :create}, {:multipart => true}) do %>
 
   <%= file_field_tag "file" %>
   <%= submit_tag "Upload" %>
 
 <% end %>
+
+<h2>Sample</h2>
+<p>
+  <a href='sample.csv'>Download template CSV</a>
+</p>
 
 <h2>Valid universities</h2>
 <ul>
