Allow individual user to specify price
# Conflicts:
#	app/models/member.rb
#	app/views/devise/registrations/_member_details.html.erb
#	db/schema.rb
#	features/step_definitions/signup_steps.rb
#	spec/models/member_spec.rb

--- a/app/views/devise/registrations/_member_details.html.erb
+++ b/app/views/devise/registrations/_member_details.html.erb
@@ -144,3 +144,16 @@
   </div>
 </fieldset>
 
+<fieldset>
+
+  <legend>How much do you want to pay?</legend>
+
+
+  <div class="control-group">
+    <%= f.label :subscription_amount, :class => 'control-label' %>
+    <div class="controls">
+      £ <%= f.number_field :subscription_amount, :required => :required %>
+      <span class="help-inline">(required)</span>
+    </div>
+  </div>
+</fieldset>
