Show price as a dropdown

--- a/app/views/devise/registrations/_member_details.html.erb
+++ b/app/views/devise/registrations/_member_details.html.erb
@@ -149,11 +149,11 @@
   <legend>How much do you want to pay?</legend>
 
 
-  <div class="control-group">
-    <%= f.label :subscription_amount, :class => 'control-label' %>
-    <div class="controls">
-      £ <%= f.number_field :subscription_amount, :required => :required %>
-      <span class="help-inline">(required)</span>
+    <div class="control-group">
+      <%= f.label :subscription_amount, :class => 'control-label' %>
+      <div class="controls">
+        £ <%= f.select :subscription_amount, options_for_select(Member.subscription_options, Member.default_subscription_option) %>
+        <span class="help-inline">(required)</span>
+      </div>
     </div>
-  </div>
 </fieldset>
