Only show pay what you want option for individuals

--- a/app/views/devise/registrations/_member_details.html.erb
+++ b/app/views/devise/registrations/_member_details.html.erb
@@ -128,10 +128,11 @@
   </div>
 </fieldset>
 
-<fieldset>
+<% if individual? %>
 
-  <legend>How much do you want to pay?</legend>
+  <fieldset>
 
+    <legend>How much do you want to pay?</legend>
 
     <div class="control-group">
       <%= f.label :subscription_amount, :class => 'control-label' %>
@@ -140,7 +141,8 @@
         <span class="help-inline">(required)</span>
       </div>
     </div>
-</fieldset>
+  </fieldset>
+
   <script>
     $('#member_subscription_amount').change(function() {
       var amount = parseInt($(this).val())
@@ -149,3 +151,5 @@
       $('span#vat').html(vat)
     })
   </script>
+
+<% end %>
