--- a/app/views/devise/registrations/_member_details.html.erb
+++ b/app/views/devise/registrations/_member_details.html.erb
@@ -148,7 +148,7 @@
 
   <fieldset>
 
-    <legend>How much do you want to pay?</legend>
+    <legend>How much do you want to pay? (inclusive of VAT, per annum)</legend>
 
     <div class="control-group">
       <%= f.label :subscription_amount, :class => 'control-label' %>
@@ -162,9 +162,7 @@
   <script>
     $('#member_subscription_amount').change(function() {
       var amount = parseInt($(this).val())
-      var vat = (amount * 1.2).toFixed(2)
       $('span#amount').html(amount)
-      $('span#vat').html(vat)
     })
   </script>
 
